force-app/main/default/objects/Sacrament__c/Sacrament__c.object-meta.xml
<CustomObject>
    <description>Summary list of sacraments related to the donor/contact/family member.</description>
    <label>Sacrament</label>
    <nameField>
        <label>Sacrament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sacraments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>