force-app/main/default/objects/Sacrament__c/fields/Certificate_on_File__c.field-meta.xml
<CustomField>
    <fullName>Certificate_on_File__c</fullName>
    <inlineHelpText>If a hard copy official certificate is on file in parish records, check this box to indicate that. Leave blank for unknown.</inlineHelpText>
    <label>Certificate on File</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>