force-app/main/default/objects/Sacrament__c/fields/Church__c.field-meta.xml
<CustomField>
    <fullName>Church__c</fullName>
    <label>Church</label>
    <length>200</length>
    <type>Text</type>
</CustomField>