force-app/main/default/objects/Sacrament__c/fields/Church_Place__c.field-meta.xml
<CustomField>
    <fullName>Church_Place__c</fullName>
    <label>Church/Place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>St. James Parish</fullName>
                <default>true</default>
                <label>St. James Parish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>