force-app/main/default/objects/Sacrament__c/fields/City_and_State__c.field-meta.xml
<CustomField>
    <fullName>City_and_State__c</fullName>
    <label>City and State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>