force-app/main/default/objects/Sacrament__c/fields/Date_of_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Marriage__c</fullName>
    <inlineHelpText>Date is available only for Sacrament type Marriage</inlineHelpText>
    <label>Date of Marriage</label>
    <type>Date</type>
</CustomField>