force-app/main/default/objects/Sacrament__c/fields/Donor_Contact_Parishioner__c.field-meta.xml
<CustomField>
    <fullName>Donor_Contact_Parishioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor/Contact/Parishioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sacraments</relationshipLabel>
    <relationshipName>Sacraments</relationshipName>
    <type>Lookup</type>
</CustomField>