force-app/main/default/objects/Sacrament__c/fields/Godparent_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Godparent_Sponsor__c</fullName>
    <inlineHelpText>Adult sponsor/godparent names can be recorded here.</inlineHelpText>
    <label>Godparent/Sponsor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>