force-app/main/default/objects/Sacrament__c/fields/Marriage_Type__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Type__c</fullName>
    <inlineHelpText>The Roman Catholic canonical status of the marriage.</inlineHelpText>
    <label>Marriage Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sacrament__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Marriage_Status</valueSetName>
    </valueSet>
</CustomField>