force-app/main/default/objects/Sacrament__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>