force-app/main/default/objects/Sacrament__c/fields/Sacrament__c.field-meta.xml
<CustomField>
    <fullName>Sacrament__c</fullName>
    <label>Sacrament Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sacrament</valueSetName>
    </valueSet>
</CustomField>