force-app/main/default/objects/Sacrament__c/fields/Sacrament_Taken_Name__c.field-meta.xml
<CustomField>
    <fullName>Sacrament_Taken_Name__c</fullName>
    <label>Sacrament Taken Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>