force-app/main/default/objects/Sacrament__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status if it is completed.</description>
    <label>Status - Completed</label>
    <type>Checkbox</type>
</CustomField>