force-app/main/default/objects/Sacrament__c/validationRules/OnlyVisibleForMarriage.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyVisibleForMarriage</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL( Sacrament__c , &#39;Marriage&#39;))</errorConditionFormula>
    <errorDisplayField>Date_of_Marriage__c</errorDisplayField>
    <errorMessage>Marriage Date is available only for Marriage Type Sacrament</errorMessage>
</ValidationRule>